2012-10-16  Earnie Boyd  <earnie@users.sourceforge.net>

	* include/sdkddkver.h (WINNTVER): New macro.
	(_WIN32_WINNT): Correct default value based on NTDDI_VERSION.
	* include/stdio.h (_get_output_format): Base declaration or define on
	VISTA.
	(_set_output_format): Ditto.
	(_get_printf_count_output): Ditto.
	(_set_printf_count_output): Ditto.
	* misc/src/libcrt/stdio/pformat.c: Remove needless code since we only
	care about Windows.

2012-10-08  Earnie Boyd  <earnie@users.sourceforge.net>

	* Makefile.in (dist-mingwrt-src, dist-mingw32-src, dist-wsl-src):
	Copy top_srcdir to a specific mingw.org-wsl directory.

2012-09-27  Earnie Boyd  <earnie@users.sourceforge.net>

	_USE_32BIT_TIME_T resolution and prepare for release.

	* include/io.h: Add _HAVE_32BIT_TIME_T to filters.
	* include/sys/stat.h: Ditto.
	* include/sys/timeb.h: Ditto.
	* include/sys/types.h: Ditto.
	* include/wchar.h: Ditto.
	* include/time.h: Rework _HAVE_32BIT_TIME_T to always use 64bit time_t
	when not defined.
	* Makefile.in (extra_OBJECTS): Move to the front of the dependency list.
	(%.o : %.s): Create rules.
	* lib/lib32/msvcrt.def.in: Remove needless __MSVCRT_VERSION__ filter
	and previous endif to continue the previous filter.
	* NEWS: New file.

2012-09-26  Earnie Boyd  <earnie@users.sourceforge.net>

	Make the changes work.

	* include/sys/stat.h (stat, fstat): Change __NO_INLINE__ filter to
	_NO_OLDNAMES.
	(_fstat64i32, _stat64i32): Define to be equal to _fstat64 and _stat64
	respectively when __NO_INLINE__ is defined.
	Remove _CRTIMP from declaration due to inline function.
	(_wstat64i32): Define an inline function or define to _wstat64 since it
	is missing from libmsvcrt.a.
	Remove _CRTIMP from declaration due to inline function.
	(xstat): Remove.
	* include/commctrl.h (tagTVINSERTSTRUCTA, tagTVINSERTSTRUCTW): Move to
	after the definition of TVITEMXA and TVITEMXW.
	(TVINSERTSTRUCT, TV_INSERTSTRUCT): Move UNICODE amp to after the
	definition of TVINSERTSTRUCTA and TVINSERTSTRUCTW.